# rws2

./: README.md  azure-pipelines.yml  pyproject.toml  setup.cfg
src/rws2/: RWS2.py  RWS_wrapper.py
