[metadata]
name = rws2
version = 0.0.1
author = Lorenzo Panchetti
author_email = lorenzo.panchetti@schindler.com
description = A package to control an ABB robot running RobotWare >= 7
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SchindlerReGIS/rws2
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    requests>=2.27.1
    xmltodict>=0.12.0
    numpy>=1.22.1

[options.packages.find]
where = src